--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ p {
     font-size: 16px;
 }
 
+/* Background photo of webpage */
 .hero {
     height: 800px;
     width: 100%;
@@ -57,6 +58,13 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+}
+
+/* Main body of text */
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
 }
 
 .float-left {
@@ -67,13 +75,6 @@ p {
 .float-right {
     float: right;
     margin-left: 25px;
-}
-
-/* Main body of text */
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
 }
 
 .search-engine-optimization,
